--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <script src="js/angular.js"></script>
 <script src="bundle.js"></script>
 <script>
-angular.module('app', ['applet'])
+angular.module('app', ['applet', 'myTodo'])
   .controller('AppCtrl', function($scope) {
 
   });
